# Slicer

./: .gitignore  MODULES.md  README.md  TODO.txt  analyze_repo.py  complex_example.c  example.c  future_work.md  param_slice_demo.py  requirements.txt  slicer.py  test_continue_fix.py  test_utf8casecmp_cfg.dot
analysis/: __init__.py  ast_nodes.py  base.py  cdg.py  cfg.py  ddg.py  graph.py  node.py  pdg.py  utils.py  visualization.py
benchmarks/mocklib/: CMakeLists.txt  README.md  mocklib.c  mocklib.h
benchmarks/mocklib/fuzz/: fuzz_buffer.c  fuzz_parser.c
benchmarks/mocklib/test/: test_buffer.c  test_parser.c
graph/: __init__.py  call_graph_generator.py
llm/: __init__.py  base.py  claude_client.py  config.py  deepseek_client.py  openai_client.py
parser/: README.md  __init__.py  call_graph.py  call_graph_generator.py  config.json  config_parser.py  doc_api_searcher.py  file_extensions.py  file_finder.py  function_extractor.py  function_info.py  function_usage_finder.py  header_analyzer.py  param_ret_info.py  repo_analyzer.py  summary.py  type_extractor.py  type_registry.py  utils.py
slice/: slicer.py
slicer/: README.md  __init__.py  function_slice.py  function_slicer.py  models.py  output_utils.py  slice.py  slicer_core.py
test/: README.md  cjson_config.json  compress_callees.dot  compress_callers.dot  compress_complete.dot  debug_call_graph.py  demo_three_call_graphs.py  header_test.py  miniz_config.json  parser_test.py  repo_call_graph.dot  single_file_example.c  test_all_functions.py  test_all_functions_with_params.py  test_api_doc_search.py  (+19 more)
(+209 files in other folders)
